--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ void = { default-features = false, version = "1.0" }
 fs2 = "0.4.3"
 sled = "0.34"
 once_cell = "1.5.2"
+xcli = "0.5.2"
 
 [target.'cfg(windows)'.dependencies]
 # required for DNS resolution
