--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,8 @@ void = { default-features = false, version = "1.0" }
 fs2 = "0.4.3"
 sled = "0.34"
 once_cell = "1.5.2"
-xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master" }
+#xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master" }
+xcli = { path = "../../kingwel-xie/xcli-rs", version = "0.5.3" }
 
 [target.'cfg(windows)'.dependencies]
 # required for DNS resolution
