--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ anyhow = { default-features = false, version = "1.0" }
 async-stream = { default-features = false, version = "0.3" }
 async-trait = { default-features = false, version = "0.1" }
 base64 = { default-features = false, features = ["alloc"], version = "0.12" }
-ipfs-bitswap = { version = "0.1", path = "bitswap" }
+bitswap = { version = "0.1", path = "bitswap" }
 byteorder = { default-features = false, version = "1.3" }
 bytes = { default-features = false, version = "1" }
 cid = { default-features = false, version = "0.5" }
@@ -30,7 +30,8 @@ domain = { default-features = false, git = "https://github.com/NLnetLabs/domain.
 either = { default-features = false, version = "1.5" }
 futures = { default-features = false, version = "0.3.9", features = ["alloc", "std"] }
 ipfs-unixfs = { version = "0.2", path = "unixfs" }
-libp2p = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns"], version = "0.34" }
+#libp2p-rs = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns"], version = "0.2.1" }
+libp2p-rs = { default-features = true, path = "../../../libp2p-rs" }
 multibase = { default-features = false, version = "0.8" }
 multihash = { default-features = false, version = "0.11" }
 prost = { default-features = false, version = "0.7" }
@@ -46,6 +47,7 @@ void = { default-features = false, version = "1.0" }
 fs2 = "0.4.3"
 sled = "0.34"
 once_cell = "1.5.2"
+log = "0.4"
 xcli = { git = "https://github.com/kingwel-xie/xcli-rs.git", branch = "master" }
 
 [target.'cfg(windows)'.dependencies]
