--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,9 @@ domain = { default-features = false, git = "https://github.com/NLnetLabs/domain.
 either = { default-features = false, version = "1.5" }
 futures = { default-features = false, version = "0.3.9", features = ["alloc", "std"] }
 ipfs-unixfs = { version = "0.2", path = "unixfs" }
+libp2p-rs = { git = "https://github.com/kingwel-xie/libp2p-rs.git", branch = "master", default-features = true }
 #libp2p-rs = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns"], version = "0.2.1" }
-libp2p-rs = { default-features = true, path = "../../../libp2p-rs" }
+#libp2p-rs = { default-features = true, path = "../../../libp2p-rs" }
 multibase = { default-features = false, version = "0.8" }
 multihash = { default-features = false, version = "0.11" }
 prost = { default-features = false, version = "0.7" }
