--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ tokio = { default-features = false, features = ["io-std", "io-util", "time"], ve
 tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log", "ansi", "env-filter"], version = "0.2" }
 rand = { default-features = false, version = "0.8", features = ["std", "std_rng"] }
 tempfile = "3.1.0"
+env_logger = "0.8"
 
 [workspace]
 members = [ "bitswap", "http", "unixfs" ]
