--- a/bitswap/Cargo.toml
+++ b/bitswap/Cargo.toml
@@ -20,7 +20,7 @@ unsigned-varint = { default-features = false, version = "0.3" }
 log = "0.4"
 prost = { version = "0.7", features = ["std"], default-features = false }
 thiserror = "1.0"
-#libp2p-rs = { default-features = true, path = "../../../libp2p-rs" }
+#libp2p-rs = { default-features = true, path = "../../../../libp2p-rs" }
 libp2p-rs = { git = "https://github.com/kingwel-xie/libp2p-rs.git", branch = "master", default-features = true }
 
 [build-dependencies]
