--- a/conformance/package.json
+++ b/conformance/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "aegir": "^21.3.0",
-    "interface-ipfs-core": "0.139.0",
-    "ipfsd-ctl": "github:ipfs-rust/js-ipfsd-ctl#add_rust_ipfs_http",
+    "interface-ipfs-core": "github:itling/interface-js-ipfs-core#add_rust_ipfs_http",
+    "ipfsd-ctl": "github:itling/js-ipfsd-ctl#add_rust_ipfs_http",
     "mocha": "^7.1.0",
     "ipfs-http-client": "46.0.0",
     "why-is-node-running": "2.2.0"
