--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ fs2 = "0.4.3"
 sled = "0.34"
 once_cell = "1.5.2"
 log = "0.4"
+env_logger = "0.8.3"
 
 [target.'cfg(windows)'.dependencies]
 # required for DNS resolution
