--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ domain = { default-features = false, git = "https://github.com/NLnetLabs/domain.
 either = { default-features = false, version = "1.5" }
 futures = { default-features = false, version = "0.3.9", features = ["alloc", "std"] }
 ipfs-unixfs = { version = "0.2", path = "unixfs" }
-libp2p-rs = { git = "https://github.com/kingwel-xie/libp2p-rs.git", branch = "master", default-features = true }
+libp2p-rs = { path = "../libp2p-rs", features = ["tokio"] }
 #libp2p-rs = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns"], version = "0.2.1" }
 #libp2p-rs = { default-features = true, path = "../../../libp2p-rs" }
 multibase = { default-features = false, version = "0.8" }
@@ -61,7 +61,7 @@ prost-build = { default-features = false, version = "0.7" }
 [dev-dependencies]
 hex-literal = { default-features = false, version = "0.3" }
 sha2 = { default-features = false, version = "0.9" }
-tokio = { default-features = false, features = ["io-std", "io-util", "time"], version = "1" }
+tokio = { default-features = true, features = ["io-std", "io-util", "time"], version = "1" }
 tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log", "ansi", "env-filter"], version = "0.2" }
 rand = { default-features = false, version = "0.8", features = ["std", "std_rng"] }
 tempfile = "3.1.0"
